--- a/listings/templates/listings.html
+++ b/listings/templates/listings.html
@@ -1,4 +1,5 @@
 {%extends 'base.html'%}
+{% block title %} | Browse Listings {% endblock %}
 {% block content %}
 {% load humanize %}
 <section id="showcase-inner" class="py-5 text-white">
