--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+
+{% block title %} | Weclome {% endblock %}
+
 {% block content %}
 {% load humanize %}
 <!-- Showcase -->
